feat: add payment route

--- a/src/app/components/payment/payment-content/payment-content.component.html
+++ b/src/app/components/payment/payment-content/payment-content.component.html
@@ -46,7 +46,7 @@
       </div>
       <div class="flex flex-row gap-5 justify-center sm:justify-normal sm:justify-center w-full sm:w-auto flex-wrap">
         <button class="border border-black py-4 px-8 rounded-3xl bg-[#FFB0B0] uppercase font-medium">
-          Purchase
+          Cancel
         </button>
         <button class="border border-black py-4 px-8 rounded-3xl bg-[#C1C8FF] uppercase font-medium">
           Purchase
