--- a/src/app/components/events/modal-event-register/modal-event-register.component.html
+++ b/src/app/components/events/modal-event-register/modal-event-register.component.html
@@ -49,7 +49,9 @@
 
       <div class="flex gap-[20px] items-center justify-end mt-[20px]">
         <button mat-raised-button
-                class="flex items-center bg-[#CAFDF4] text-black border border-black gap-1 px-[35px] py-[12.5px] rounded-full uppercase ">
+                class="flex items-center bg-[#CAFDF4] text-black border border-black gap-1 px-[35px] py-[12.5px] rounded-full uppercase"
+                (click)="goToPage('payment')"
+                >
           Reserve
         </button>
         <button mat-raised-button
