--- a/src/app/components/specialist/user-reviews/user-reviews.component.html
+++ b/src/app/components/specialist/user-reviews/user-reviews.component.html
@@ -1,22 +1,26 @@
 <section class="mt-8">
-    <h3>User Reviews:</h3>
-
-    <div class="flex flex-col gap-[20px]" >
-        <mat-card class="flex flex-col gap-[25px] px-[10px] py-[15px] card roundede-[5px]" *ngFor="let review of specialistReviewData">
-            <mat-card-header class="flex items-center">
-                <img class="w-[50px] h-[50px] rounded-full mr-[15px]" mat-card-image src="{{review.user.profileImg}}" alt=""/>
-                <div class="ml-15px cardHeader">
-                    <p class="mb-0 text-sm">{{review.user.firstName + " " + review.user.lastName}}</p>
-                    <p class="mb-0 text-sm text-[#C2C2C2]">{{review.user.email}}</p>
-                </div>
-            </mat-card-header>
-            <mat-card-content class="cardContent">
-                <p>{{review.description}}</p>
-            </mat-card-content>
-        </mat-card>
-    </div>
-
     <div class="flex justify-end mt-4">
-        <button mat-raised-button color="primary" (click)="openAddReview()">Add Review</button>
+        <button class="flex items-center bg-[#EFF0FF] text-black border border-black gap-1 px-[15px] py-[12.5px] rounded-2xl hover:bg-purple-300 transition-all duration-300 ease-in-out" (click)="openAddReview()">
+          Add Review
+        </button>
       </div>
-</section>
+    <h3>User Reviews:</h3>
+  
+    <div class="flex flex-col gap-[20px]">
+      <mat-card class="flex flex-col gap-[25px] px-[10px] py-[15px] card rounded-[5px]" *ngFor="let review of specialistReviewData">
+        <mat-card-header class="flex items-center">
+          <img class="w-[50px] h-[50px] rounded-full mr-[15px]" mat-card-image src="{{review.user.profileImg}}" alt=""/>
+          <div class="ml-[15px] cardHeader">
+            <p class="mb-0 text-sm">{{review.user.firstName + " " + review.user.lastName}}</p>
+            <p class="mb-0 text-sm text-[#C2C2C2]">{{review.user.email}}</p>
+          </div>
+        </mat-card-header>
+        <mat-card-content class="cardContent">
+          <p>{{review.description}}</p>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  
+    
+  </section>
+  
