--- a/src/app/pages/calendar/calendar.component.html
+++ b/src/app/pages/calendar/calendar.component.html
@@ -1,6 +1,1 @@
-<mat-card class="demo-inline-calendar-card">
-  <mat-calendar [(selected)]="selectedDate"></mat-calendar>
-</mat-card>
-<p> Date: {{selectedDate}} </p>
-
-<app-info-events></app-info-events>
+<app-calendar-content></app-calendar-content>
