feat: user model changed, events connection with backend and changes in components due to updated user model

--- a/src/app/components/appoinment/make-date-appoinment/make-date-appoinment.component.html
+++ b/src/app/components/appoinment/make-date-appoinment/make-date-appoinment.component.html
@@ -6,7 +6,7 @@
                 <div class="flex gap-[20px] items-center">
                     <p>Specialist name</p>
                     <mat-form-field class="w-full max-w-[70%]">
-                        <input class="border border-black" matInput placeholder="Name of Specialist" name="name" required  [(ngModel)]="specialistData.firstName" disabled/>
+                        <input class="border border-black" matInput placeholder="Name of Specialist" name="name" required  [(ngModel)]="specialistData.fullName" disabled/>
                     </mat-form-field>
                 </div>
 
