--- a/src/app/components/specialist/make-appointment/make-appointment.component.html
+++ b/src/app/components/specialist/make-appointment/make-appointment.component.html
@@ -6,24 +6,24 @@
                 <div class="flex gap-[20px] items-center">
                     <p>Specialist name</p>
                     <mat-form-field class="w-full max-w-[70%]">
-                        <input class="border border-black" matInput placeholder="Name of Specialist" name="name" required  [(ngModel)]="specialistData.firstName"/>
+                        <input class="border border-black" matInput placeholder="Name of Specialist" name="name" required  [(ngModel)]="specialistData.fullName"/>
                     </mat-form-field>
                 </div>
-    
+
                 <div class="flex gap-[20px] items-center">
                     <p>Email</p>
                     <mat-form-field class="w-full max-w-[70%]">
                         <input matInput placeholder="Email of Specialist" name="email" required  [(ngModel)]="specialistData.email"/>
                     </mat-form-field>
                 </div>
-    
-                <div class="flex gap-[20px] items-center">
+
+               <!-- <div class="flex gap-[20px] items-center">
                     <p>Etiquets</p>
                     <mat-form-field class="w-full max-w-[70%]">
                         <input matInput placeholder="Etiquets of Specialist" name="etiquets" required  [(ngModel)]="specialistData.etiquets"/>
                     </mat-form-field>
-                </div>
-    
+                </div> -->
+
                 <div class="flex gap-[20px] items-center">
                     <p>Schedule</p>
                     <mat-form-field class="w-full max-w-[70%]">
@@ -34,14 +34,14 @@
                         </mat-select>
                     </mat-form-field>
                 </div>
-    
-                <div class="flex gap-[20px] items-center">
+
+               <!-- <div class="flex gap-[20px] items-center">
                     <p>Phone</p>
                     <mat-form-field class="w-full max-w-[70%]">
                         <input matInput placeholder="Phone of Specialist" name="phone" required  [(ngModel)]="specialistData.phone"/>
                     </mat-form-field>
-                </div>
-    
+                </div>-->
+
                 <div class="flex gap-[20px] items-center justify-end mt-[20px]">
                     <button mat-raised-button class="flex items-center bg-[#CAFDF4] text-black border border-black gap-1 px-[35px] py-[12.5px] rounded-full uppercase ">Reserve</button>
                     <button mat-raised-button class="flex items-center bg-[#CAFDF4] text-black border border-black gap-1 px-[35px] py-[12.5px] rounded-full uppercase " (click)="clickedPopup.emit()">Cancel</button>
