--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,7 +6,7 @@
       <img class="block h-12 w-12" src="../../../assets/logo-connectionlink.png" alt="logoAidManager"/>
       <div class="flex flex-col justify-center gap-1 mt-0.5">
         <p class="title-logo text-md font-medium tracking-wide">ConnectionLink</p>
-        <span class="text-sm text-blue-800 font-normal capitalize">as {{ user?.role }}</span>
+        <span class="text-sm text-blue-800 font-normal capitalize">as {{ user?.isSpecialistUser }}</span>
       </div>
     </div>
   </div>
@@ -14,9 +14,9 @@
   <div class="flex flex-row gap-4 cursor-pointer" (click)="goToPage('profile')">
     <div mat-card-avatar class="example-header-image"></div>
     <div class="flex flex-col justify-center gap-1.5">
-      <p class="text-base font-medium tracking-wide">{{ user?.firstName + ' ' + user?.lastName }}</p>
+      <p class="text-base font-medium tracking-wide">{{ user?.fullName }}</p>
       <div class="flex flex-row items-center gap-4">
-        <p class="text-sm text-green-600 font-normal">{{ user?.isSubscribed === false ? 'Single User' : 'Premium User' }}</p>
+        <!--<p class="text-sm text-green-600 font-normal">{{ user?.isSubscribed === false ? 'Single User' : 'Premium User' }}</p>-->
         <div class="members-quantity flex flex-row items-center text-green-700">
           <mat-icon class="flex text-lg w-0 h-0 -mt-1.5" aria-hidden="false" aria-label="team icon" fontIcon="person"></mat-icon>
           <span class="text-sm">23</span>
