--- a/src/app/components/specialist/add-user-review/add-user-review.component.html
+++ b/src/app/components/specialist/add-user-review/add-user-review.component.html
@@ -8,7 +8,7 @@
         <p>Specialist Name</p>
         <mat-form-field class="w-full max-w-[70%]">
 
-          <input class="border border-black" matInput placeholder="Name of Specialist" name="name" required  [(ngModel)]="review.specialist.firstName"/>
+          <input class="border border-black" matInput placeholder="Name of Specialist" name="name" required  [(ngModel)]="review.specialist.fullName"/>
         </mat-form-field>
       </div>
       <div class="flex gap-[20px] items-center">
@@ -34,7 +34,7 @@
     </div>
   }
   </div>
-  
+
 </section>
 
 
