feat: Implement views for forums and appointments with GET requests for each specialist
Implemented views for forums and appointments, each with respective GET requests for specialist-specific data retrieval. This commit introduces new functionality to handle user interaction with forums and appointment scheduling, enhancing user experience by providing structured access to specialist-related information."

--- a/src/app/components/calendar/appointments-scheduled-list/appointments-scheduled-list.component.scss
+++ b/src/app/components/calendar/appointments-scheduled-list/appointments-scheduled-list.component.scss
@@ -4,12 +4,13 @@ h1, h2, h3, h4, h5, h6, p, a {
 
 .appointments-scheduled {
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap; /* Permite que las tarjetas se envuelvan en filas */
   gap: 25px;
-  justify-content: flex-start;
 }
 
 .appointments-scheduled > article {
+;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   flex-basis: 550px;
 }
