--- a/src/app/components/calendar/appointments-scheduled-list/appointments-scheduled-list.component.html
+++ b/src/app/components/calendar/appointments-scheduled-list/appointments-scheduled-list.component.html
@@ -1,25 +1,27 @@
 <section class="appointments-scheduled">
-  <article class="bg-slate-100 p-4 flex flex-col gap-5 rounded-xl">
+  <article *ngFor="let appointment of appointments; let i = index" class="bg-slate-100 p-4 flex flex-col gap-5 rounded-xl border-2">
     <div class="flex flex-row justify-between items-center mb-2">
       <div>
-        <h4 class="title-event">Stress at university</h4>
+        <h4 class="title-event">Appointment N°| {{ i + 1 }}</h4>
       </div>
       <div class="flex flex-row gap-2 items-center">
         <mat-icon
           class="text-slate-500 cursor-pointer font-medium text-md w-0 h-0 mb-0 hover:scale-125 transition-all duration-300 ease-out"
           fontIcon="access_time"></mat-icon>
-        <span class="text-slate-500 mt-0.5 tracking-wider">25/04/23</span>
+        <span class="text-slate-500 mt-0.5 tracking-wider">{{ appointment.calendar?.day?.day.toLocaleUpperCase() + ' - ' + appointment.calendar?.hourResource?.hour }}</span>
       </div>
     </div>
     <div class="grid grid-cols-1 sm:grid-cols-2 grid-rows-[1fr,auto] sm:grid-rows-1 gap-3">
       <div>
         <span class="font-medium text-base text-[#0C359E] tracking-wide">Appointment Information:</span>
         <div class="flex flex-col gap-3 mt-5">
-          <p><span class="font-medium">Specialist: </span>Nekolas Esteban</p>
-          <p><span class="font-medium">Role: </span>Counsenling</p>
-          <p><span class="font-medium">Phone: </span>23123213</p>
-          <p><span class="font-medium">Email: </span>nekoexample.com</p>
-          <p><span class="font-medium">Etiquets: </span>Stress - Anxiety</p>
+          <p><span class="font-medium">Specialist: </span>{{ appointment.user?.fullName }}</p>
+          <p><span class="font-medium">Username: </span>{{ appointment.user?.username }}</p>
+          <p><span class="font-medium">Age: </span>{{ appointment.user?.age }}</p>
+          <p><span
+            class="font-medium">Phone: </span>{{ appointment.user?.phone ? appointment.user?.phone.toString() : 'No phone' }}
+          </p>
+          <p><span class="font-medium">Email: </span>{{ appointment.user?.email }}</p>
         </div>
         <button
           class="flex justify-center items-center bg-[#EFF0FF] text-black border border-black gap-1
@@ -33,11 +35,11 @@
         <img
           class="rounded-2xl h-56 w-full max-w-full"
           alt="image_event"
-          src="https://eldoctor.pe/app/images/medico/perfil/imagen-medico.20200901153524.jpg  ">
+          [src]="appointment.user?.profileImageUrl">
       </div>
     </div>
     <div class="mt-1.5 flex justify-between items-center">
-      <p class="text-black"><span class="text-red-700 font-medium">Registered in:</span> 24/28/12 - 8:40AM</p>
+      <p class="text-black"><span class="text-red-700 font-medium">Registered in: </span>{{ appointment.createdAt | date:'dd/MM/yyyy' }}</p>
       <p><span class="font-medium text-red-800">Status:</span> Paid</p>
     </div>
   </article>
