feat: user event registration added and working

--- a/src/app/components/events/event-card/event-card.component.html
+++ b/src/app/components/events/event-card/event-card.component.html
@@ -26,5 +26,5 @@
       </div>
     </div>
   </article>
-  <app-modal-event-register [showPopup]="showPopUp" (closeModal)="closeModal()"></app-modal-event-register>
+  <app-event-user-register [showPopup]="showPopUp" (closeModal)="closeModal()"></app-event-user-register>
 </div>
