--- a/src/app/components/specialist/user-reviews/user-reviews.component.html
+++ b/src/app/components/specialist/user-reviews/user-reviews.component.html
@@ -14,7 +14,7 @@
           <div class="ml-[15px] cardHeader">
             <p class="mb-0 text-sm">{{review.user.fullName}}</p>
             <p class="mb-0 text-sm text-[#C2C2C2]">{{review.user.email}}</p>
-
+          </div>
           <img class="w-[50px] h-[50px] rounded-full mr-[15px]" mat-card-image src="{{review.specialist?.profileImageUrl}}" alt=""/>
           <div class="ml-[15px] cardHeader">
             <p class="mb-0 text-sm">{{review.specialist?.fullName}}</p>
