--- a/src/app/components/profile/profile-content/profile-content.component.html
+++ b/src/app/components/profile/profile-content/profile-content.component.html
@@ -2,21 +2,17 @@
   <div class="grid grid-cols-1 xl:grid-cols-[1fr,auto] grid-rows-[1fr,auto] xl:grid-rows-1 p-8
       items-center gap-10 w-full border border-gray-300 justify-center bg-slate-50 h-full">
     <div class="flex flex-col gap-4 md:w-[80%] w-[100%]">
-      <h2 class="text-blue-900">{{ user.firstName + " " + user.lastName }} profile:</h2>
-      <p><strong>Full name:</strong> {{ user.firstName + " " + user.lastName }} </p>
-      <p><strong>Email:</strong> {{ user.email }}</p>
-      <p><strong>Phone:</strong> {{ user.phone }}</p>
-      <p><strong>Role:</strong> {{ user.role }}</p>
-      <p><strong>Age:</strong> 20 years</p>
-      <p style="line-height: 1.725 !important;"><strong>Bio:</strong> {{ user.firstName + user.lastName }} es un
-        apasionado desarrollador de software con más de 10 años de experiencia
-        en la industria tecnológica. Nacido y criado en Madrid, siempre mostró un gran interés por la tecnología desde
-        muy joven. Su primer encuentro con la programación fue a los 12 años, cuando su tío le regaló un viejo ordenador
-        y un libro de programación en BASIC.</p>
+      <h2 class="text-blue-900">{{ user?.fullName }} profile:</h2>
+      <p><strong>Full name:</strong> {{ user?.fullName }} </p>
+      <p><strong>Email:</strong> {{ user?.email }}</p>
+      <p><strong>Birthday:</strong> {{ user?.birthday | date: 'MM/dd/yyyy' }}</p>
+      <p><strong>Banner Image:</strong> {{ user?.bannerImageUrl }}</p>
+      <p><strong>Age:</strong>{{ user?.age }}</p>
+      <p style="line-height: 1.725 !important;"><strong>Bio:</strong> {{ user?.description }}</p>
     </div>
     <div class="w-full flex flex-col gap-6 items-center">
-      <img class="max-w-[400px] w-full flex mx-auto min-h-[400px] object-cover rounded-xl" src="{{user.profileImg}}"
-           alt="{{ user.firstName + ' ' + user.lastName + ' Image Profile' }}"/>
+      <img class="max-w-[400px] w-full flex mx-auto min-h-[400px] object-cover rounded-xl" src="{{user?.profileImageUrl}}"
+           alt="{{ user?.fullName + ' Image Profile' }}"/>
       <button
         (click)="showEditProfileModal()"
         class="flex items-center bg-[#EFF0FF] text-black border border-black gap-1
